# my-messenger

./: .gitignore  app.js  auth.js  group-chat.js  mega-storage.js  messages.json  package-lock.json  package.json  render.yaml  telegram-media-cache.json  telegram-storage.js  users.json  webrtc.js
data/: currency.json  gifts.json  groups.json  messages.json  users.json  verification.json
frontend/: admin-panel.js  file-manager.js  index.html
frontend/static/: auth.js  call-manager.js  chat.js  currency-manager.js  group-chat.js  private-chat.js  settings-manager.js  style.css  tauri-check.js  verification-manager.js  webrtc.js
frontend/templates/: chat.ejs  chat.html  login.html  register.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
static/: auth.js  call-manager.js  chat.js  currency-manager.js  group-chat.js  main.js  private-chat.js  profile-manager.js  settings-manager.js  style.css  voice-message-manager.js  webrtc.js
templates/: chat.html  index.html  login.html  register.html
uploads/: 1764304404223-326438426.webm  1764304430691-282525804.webm
