[package]
name = "my-messenger"
version = "0.1.0"
description = "My Messenger Desktop Application"
authors = ["Your Name"]
edition = "2021"

[[bin]]
name = "my-messenger"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.0", features = [] } # Убрана функция "dialog"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }


[build-dependencies]
tauri-build = { version = "2.0", features = [] }
